--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="about" href="about.html">
 
 </head>
 
 <body>
+    <header>
+        <div class="logo">
+            <img src="img/lambda-black.png" alt="Lambda School Logo">
+        </div>
+        <nav>
+            <a href="index.html" target="_blank">Home</a>
+            <a href="about.html" target="_blank">About</a>
+            <a href="#" target="_blank">Products</a>
+            <a href="#" target="_blank">Blog</a>
+            <a href="#" target="_blank">Contact</a>
+        </nav>
+        <div class="header-image">
+            <img src="img/jumbo.jpg">
+        </div>
+    </header>
     <div class="container">
-   
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
