--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="img/lambda-black.png" alt="Lambda School Logo">
+        <div class="header">
+            <div class="logo">
+                <img src="img/lambda-black.png" alt="Lambda School Logo">
+            </div>
+            <nav>
+                <a href="index.html" target="_blank">Home</a>
+                <a href="about.html" target="_blank">About</a>
+                <a href="#" target="_blank">Products</a>
+                <a href="#" target="_blank">Blog</a>
+                <a href="#" target="_blank">Contact</a>
+            </nav>
         </div>
-        <nav>
-            <a href="index.html" target="_blank">Home</a>
-            <a href="about.html" target="_blank">About</a>
-            <a href="#" target="_blank">Products</a>
-            <a href="#" target="_blank">Blog</a>
-            <a href="#" target="_blank">Contact</a>
-        </nav>
         <div class="header-image">
-            <img src="img/jumbo.jpg">
+             <img src="img/jumbo.jpg">
         </div>
     </header>
     <div class="container">
