--- a/about.html
+++ b/about.html
@@ -29,51 +29,50 @@
          <img src="img/jumbo-about.png">
     </div>
 </header>
-    <div class="container-about-page">
-      <div class="about-text">
-        <h2>About</h2>
-        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-      </div>
-      <div class="about-cards">
-        <div class="cards">
-          <img src="img/about-plan.png" alt="strategy">
-          <h2>Strategy</h2>
-          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-          <a href="#" target="_blank">Learn More</a>
-        </div>
-        <div class="cards">
-          <img src="img/about-working.png" alt="strategy">
-          <h2>How We Work</h2>        
-          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-          <a href="#" target="_blank">Learn More</a>
-        </div>
-        <div class="cards">
-          <img src="img/about-office.png" alt="strategy">
-          <h2>Places We Work</h2>
-          <p>terative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-          <a href="#" target="_blank">Learn More</a>
-        </div>
-        <div class="cards">
-          <img src="img/about-meeting.png" alt="strategy">        
-          <h2>Collaboration</h2>       
-          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-          <a href="#" target="_blank">Learn More</a>
-        </div>
-      </div>
-
-      <h2>Let's Work Together</h2>
-
+  <div class="container-about-page">
+    <div class="about-text">
+      <h2>About</h2>
       <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-          
-      <footer>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="#">About</a>
-          <a href="#">Products</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact</a>
-        </nav>
-      </footer>
-    </div><!-- container -->        
+    </div>
+    <div class="about-cards">
+      <div class="cards">
+        <img src="img/about-plan.png" alt="strategy">
+        <h2>Strategy</h2>
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <a href="#" target="_blank">Learn More</a>
+      </div>
+      <div class="cards">
+        <img src="img/about-working.png" alt="strategy">
+        <h2>How We Work</h2>        
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <a href="#" target="_blank">Learn More</a>
+      </div>
+      <div class="cards">
+        <img src="img/about-office.png" alt="strategy">
+        <h2>Places We Work</h2>
+        <p>terative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <a href="#" target="_blank">Learn More</a>
+      </div>
+      <div class="cards">
+        <img src="img/about-meeting.png" alt="strategy">        
+        <h2>Collaboration</h2>       
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <a href="#" target="_blank">Learn More</a>
+      </div>
+    </div>
+    <div class="about-bottom-text">
+      <h2>Let's Work Together</h2>
+      <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+      </div>   
+    <footer>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="#">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+    </footer>
+  </div><!-- container -->        
 </body>
 </html>
